---------------------------------------------------------------------------------------------------
Version: 5.3.2
Date: ????
  Features:
    - Added the ability to load presets into the spidertron
---------------------------------------------------------------------------------------------------
Version: 5.3.1
Date: 2020-11-24
  Changes:
    - Removed the (+/-) buttons, a new row will be added if something is put in the last row
  Bugfixes:
    - Fixed error when adding AutoTrash to an existing save
---------------------------------------------------------------------------------------------------
Version: 5.3.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.2.16
Date: 2020-11-21
  Changes:
    - Added shortcut to toggle the AutoTrash gui
    - Added mod setting to hide the button in the top left
    - Removed commands /at_show and /at_hide
---------------------------------------------------------------------------------------------------
Version: 5.2.15
Date: 2020-11-20
  Bugfixes:
    - Fixed gui buttons becoming unresponsive.
---------------------------------------------------------------------------------------------------
Version: 5.2.14
Date: 2020-11-18
  Changes:
    - Sliders change the amount by one stack at a time.
    - Added support for multiple main networks.
---------------------------------------------------------------------------------------------------
Version: 5.2.13
Date: 2020-11-08
  Bugfixes:
    - Fixed error when shift-clicking items to move them.
---------------------------------------------------------------------------------------------------
Version: 5.2.12
Date: 2020-11-07
  Changes:
    - Applying changes or pressing enter after changing the trash amount will display a message if the the amount got adjusted to the request amount.
  Bugfixes:
    - Fixed error when changing the trash amount via keyboard.