@@ -34,6 +34,7 @@ tooltip-remove-network=Remove current from main networks
 tooltip-edit-networks=Edit networks
 tooltip-selection-tool=Select roboports with the tool to add them to networks\nShift + select to remove them.
 tooltip-show-network=Show in map
+spider-save=Save the spidertrons logistic requests as a preset
 
 [at-message]
 name-not-set=You must enter a name!
