@@ -1,6 +1,8 @@
 local gui = require("__flib__.gui-beta")
 local presets = require("scripts.presets")
 local at_util = require("scripts.util")
+local gui_util = require("scripts.gui-util")
+local player_data = require("scripts.player-data")
 local spider_gui = {}
 
 local function set_requests(spider, requests, keep_presets)
@@ -45,10 +47,7 @@ local collapse_sprites = {
 
 spider_gui.handlers = {
     load = function(e, msg)
-        set_requests(e.entity, e.pdata.presets[msg.name], e.pdata.flags.spider.keep_presets)
-    end,
-    toggle_keep = function(e, _)
-        e.pdata.flags.spider.keep_presets = e.element.state
+        set_requests(e.entity, e.pdata.presets[msg.name], e.shift)
     end,
     collapse = function(e)
         local frame = e.pdata.gui.spider.preset_frame
@@ -58,6 +57,17 @@ spider_gui.handlers = {
             e.element[k] = v
         end
         frame.parent.style.bottom_padding = new_state and 8 or 0
+    end,
+    save = function(e)
+        local textfield = e.pdata.gui.spider.preset_textfield.text
+        local config = at_util.get_requests(e.entity.get_vehicle_logistic_slot, e.entity.request_slot_count)
+        if player_data.add_preset(e.player, e.pdata, textfield.text, config) then
+            spider_gui.update(e.pdata)
+            textfield.text = ""
+        end
+    end,
+    textfield = function(e)
+        e.element.select_all()
     end
 }
 
@@ -83,23 +93,27 @@ function spider_gui.init(player, pdata)
                 {type = "flow", children = {
                     {type = "label", style = "frame_title", caption = "Logistics", elem_mods = {ignored_by_interaction = true}},
                     {type = "empty-widget", style = "flib_titlebar_drag_handle", elem_mods = {ignored_by_interaction = true}},
-                    at_util.frame_action_button{sprite="utility/collapse", hovered_sprite="utility/collapse_dark", clicked_sprite="utility/collapse_dark",
+                    gui_util.frame_action_button{sprite="utility/collapse", hovered_sprite="utility/collapse_dark", clicked_sprite="utility/collapse_dark",
                         actions = {on_click = {gui = "spider", action = "collapse"}},
                         tooltip={"at-gui.keep-open"}},
                 }},
                 {type = "frame", style = "inside_shallow_frame", direction = "vertical", ref = {"preset_frame"}, children = {
                     {type = "frame", style = "subheader_frame", style_mods = {left_padding = 8}, children={
-                        {type = "checkbox", caption = "Keep existing requests", state = pdata.flags.spider.keep_presets,
-                            actions = {on_checked_state_changed = {gui = "spider", action = "toggle_keep"}}
+                        {type = "textfield", style = "long_number_textfield", ref = {"preset_textfield"},
+                            actions = {on_click = {gui = "spider", action = "textfield"}},
                         },
-                        {type = "empty-widget", style_mods = {horizontally_stretchable = true}}
+                        {type = "empty-widget", style_mods = {horizontally_stretchable = true}},
+                        {type = "sprite-button", sprite = "utility/check_mark",style = "item_and_count_select_confirm",
+                            tooltip = {"at-gui.spider-save"},
+                            actions = {on_click = {gui = "spider", action = "save"}}
+                        }
                     }},
                     {type = "flow", direction="vertical", style = "at_right_container_flow", children = {
                         {type = "frame", style = "deep_frame_in_shallow_frame", children = {
                             {type = "scroll-pane", style = "at_right_scroll_pane", style_mods = {maximal_height = 500}, children = {
                                 {type = "flow", direction = "vertical",
                                     ref = {"presets"},
-                                    style_mods = {vertically_stretchable = false, padding = 8},
+                                    style_mods = {vertically_stretchable = false, padding = 8, horizontally_stretchable = true},
                                     children = spider_gui.presets(pdata)
                                 },
                             }}
