@@ -2,7 +2,10 @@
 Version: 5.3.2
 Date: ????
   Features:
-    - Added the ability to load presets into the spidertron
+    - Added the ability to load presets into the spidertron:
+      - Presets are the same as the players presets
+      - You can save the spidertrons current logistic requests as a preset
+      - Holding shift when clicking on a preset adds it to the current requests. This allows combining multiple presets
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.1
 Date: 2020-11-24
